það sem var lagað

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="cart-content hidden">eitthvað í körfu.</div>
       </div>
 
-      <table class="table">
+      <table class="table cart-table">
         <thead>
           <tr>
             <th>Heiti</th>
